// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bokmål render 1`] = `
<div>
  <div
    class="MuiBox-root css-161zr72"
  >
    <header
      class="_headerContainer_d17b29"
    >
      <div
        class="_headerLogo_d17b29"
      >
        <a
          href="/helseatlas"
          rel="home"
        >
          <img
            alt="Hjem"
            data-nimg="1"
            decoding="async"
            height="47"
            loading="lazy"
            src="/helseatlas/img/logos/helseatlas.svg?w=384&q=75"
            srcset="/helseatlas/img/logos/helseatlas.svg?w=256&q=75 1x, /helseatlas/img/logos/helseatlas.svg?w=384&q=75 2x"
            style="color: transparent;"
            width="186"
          />
        </a>
      </div>
      <nav
        class="_headerNavContainer_d17b29"
      >
        <div
          class="_navButtons_d17b29"
        >
          <div
            class="_lang_d17b29"
          >
            <div
              class="_no_d17b29 _active_d17b29"
              data-testid="buttonNo"
            >
              <a
                href="/helseatlas"
              >
                NO
              </a>
            </div>
            <div
              class="_eng_d17b29 undefined"
              data-testid="buttonEng"
            >
              <a
                href="/helseatlas/en"
              >
                ENG
              </a>
            </div>
          </div>
          <div
            class="_menuButton_d17b29"
          >
            <div
              class="_popUpBtn_d1cb5c"
            >
              <button
                class="_button_4123ea"
                data-testid="menuButton"
              >
                <span
                  class="_buttonBurgerIcon_4123ea"
                >
                  <span
                    class="top"
                  />
                  <span
                    class="middle"
                  />
                  <span
                    class="bottom"
                  />
                </span>
                <span
                  class="_buttonText_4123ea"
                >
                  MENY
                </span>
              </button>
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="_container_6b07e8"
    >
      <div
        class="_article__title_6b07e8"
      >
        <h1>
          Dette er en tittel
        </h1>
      </div>
      <div
        class="_article_6b07e8"
      >
        <div
          class="_article__content_6b07e8"
        >
          <div
            class="_ingress_e666a6"
          >
            <p>
              Dette er et sammendrag
            </p>
          </div>
          <p>
            Dette er en kort tekst
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-16epkjp-MuiGrid2-root"
      style="color: white; margin-top: 20px;"
    >
      <div
        style="background-color: rgb(51, 51, 51); width: 100%;"
      >
        <div
          class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 footer css-5a8y6v-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-ilk0ky-MuiGrid2-root"
            >
              <div
                class="MuiStack-root css-v2woy3-MuiStack-root"
              >
                <h4>
                  OM NETTSTEDET
                </h4>
                <a
                  href="https://www.skde.no/om-skde/personvern/"
                  target="_self"
                >
                  <div
                    class="MuiStack-root css-1rlitzi-MuiStack-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1nmqws6-MuiTypography-root"
                    >
                      Personvern
                    </p>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1lzspe0-MuiSvgIcon-root"
                      data-testid="ArrowForwardIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </div>
                </a>
                <a
                  href="https://www.skde.no/om-skde/informasjonskapsler/"
                  target="_self"
                >
                  <div
                    class="MuiStack-root css-1rlitzi-MuiStack-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1nmqws6-MuiTypography-root"
                    >
                      Informasjonskapsler
                    </p>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1lzspe0-MuiSvgIcon-root"
                      data-testid="ArrowForwardIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </div>
                </a>
                <a
                  href="https://uustatus.no/nb/erklaringer/publisert/589a8d23-4993-446e-b7eb-ef310bfe1dd7"
                  target="_blank"
                >
                  <div
                    class="MuiStack-root css-1rlitzi-MuiStack-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1nmqws6-MuiTypography-root"
                    >
                      Tilgjengelighetserklæring
                    </p>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1lzspe0-MuiSvgIcon-root"
                      data-testid="ArrowOutwardIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6 6v2h8.59L5 17.59 6.41 19 16 9.41V18h2V6z"
                      />
                    </svg>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-gp36o2-MuiGrid2-root"
            >
              <div
                class="MuiStack-root css-v2woy3-MuiStack-root"
              >
                <h4>
                  KONTAKT
                </h4>
                <a
                  href="https://www.skde.no/om-skde/kontaktinformasjon/"
                  target="_self"
                >
                  <div
                    class="MuiStack-root css-1rlitzi-MuiStack-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1nmqws6-MuiTypography-root"
                    >
                      Kontakt SKDE
                    </p>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1lzspe0-MuiSvgIcon-root"
                      data-testid="ArrowForwardIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="background-color: rgb(26, 26, 26); width: 100%;"
      >
        <div
          class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 footer css-1vz7yrt-MuiGrid2-root"
            style="background: rgb(26, 26, 26);"
          >
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1r1tkey-MuiGrid2-root"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-lg-12 MuiGrid2-spacing-xs-4 css-bte3zk-MuiGrid2-root"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
                >
                  <a
                    href="https://www.skde.no/"
                  >
                    <img
                      alt="SKDE-logo"
                      class="footer-logo"
                      data-nimg="1"
                      decoding="async"
                      height="52"
                      id="skde-footer-logo"
                      loading="lazy"
                      src="/img/logos/logo-skde-neg.svg?w=384&q=75"
                      srcset="/img/logos/logo-skde-neg.svg?w=256&q=75 1x, /img/logos/logo-skde-neg.svg?w=384&q=75 2x"
                      style="color: transparent;"
                      width="129"
                    />
                  </a>
                </div>
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
                >
                  <a
                    href="https://helse-forde.no/"
                    title="Link til Helse Førde"
                  >
                    <img
                      alt="Helse Førde logo"
                      data-nimg="1"
                      decoding="async"
                      height="52"
                      loading="lazy"
                      src="/helseatlas/img/logos/helse-forde-hvit.svg?w=640&q=75"
                      srcset="/helseatlas/img/logos/helse-forde-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-forde-hvit.svg?w=640&q=75 2x"
                      style="color: transparent;"
                      width="234"
                    />
                  </a>
                </div>
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
                >
                  <a
                    href="https://helse-vest.no/"
                    title="Link til Helse Vest"
                  >
                    <img
                      alt="Helse Vest logo"
                      data-nimg="1"
                      decoding="async"
                      height="52"
                      loading="lazy"
                      src="/helseatlas/img/logos/helse-vest-hvit.svg?w=640&q=75"
                      srcset="/helseatlas/img/logos/helse-vest-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-vest-hvit.svg?w=640&q=75 2x"
                      style="color: transparent;"
                      width="234"
                    />
                  </a>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
            >
              Senter for klinisk dokumentasjon og evaluering (SKDE) er en enhet i Helse Nord.
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 MuiGrid2-grid-md-4 css-1n7uijs-MuiGrid2-root"
            >
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <b>
                  TELEFON
                </b>
                <a
                  class="css-abunt4"
                  href="tel:77755800"
                >
                  77 75 58 00
                </a>
                <br />
                <b>
                  EPOST
                </b>
                <a
                  class="css-abunt4"
                  href="mailto:postmottak@helse-nord.no"
                >
                  postmottak@helse-nord.no
                </a>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 MuiGrid2-grid-md-4 css-1n7uijs-MuiGrid2-root"
            >
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <b>
                  BESØKSADRESSE
                </b>
                Sykehusvegen 23 
                <br />
                9019 TROMSØ
                <a
                  class="css-abunt4"
                  href="https://maps.app.goo.gl/ohLzsYb8v6YvEDfL9"
                >
                  Vis kart
                </a>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-4 css-w205dv-MuiGrid2-root"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
              >
                <div
                  class="MuiStack-root css-nen11g-MuiStack-root"
                >
                  <b>
                    ORGANISASJONSNUMMER
                  </b>
                  990803765
                </div>
              </div>
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row css-1yuh6d4-MuiGrid2-root"
              >
                <a
                  href="https://www.helse-nord.no/"
                >
                  <img
                    alt="Helse Nord logo"
                    class="footer-logo"
                    data-nimg="1"
                    decoding="async"
                    height="52"
                    id="helse-nord-logo"
                    loading="lazy"
                    src="/img/logos/logo-helse-nord-neg.svg?w=640&q=75"
                    srcset="/img/logos/logo-helse-nord-neg.svg?w=256&q=75 1x, /img/logos/logo-helse-nord-neg.svg?w=640&q=75 2x"
                    style="color: transparent;"
                    width="220"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`English render 1`] = `
<div>
  <div
    class="MuiBox-root css-161zr72"
  >
    <header
      class="_headerContainer_d17b29"
    >
      <div
        class="_headerLogo_d17b29"
      >
        <a
          href="/helseatlas/en"
          rel="home"
        >
          <img
            alt="Hjem"
            data-nimg="1"
            decoding="async"
            height="47"
            loading="lazy"
            src="/helseatlas/img/logos/helseatlas.svg?w=384&q=75"
            srcset="/helseatlas/img/logos/helseatlas.svg?w=256&q=75 1x, /helseatlas/img/logos/helseatlas.svg?w=384&q=75 2x"
            style="color: transparent;"
            width="186"
          />
        </a>
      </div>
      <nav
        class="_headerNavContainer_d17b29"
      >
        <div
          class="_navButtons_d17b29"
        >
          <div
            class="_lang_d17b29"
          >
            <div
              class="_no_d17b29 undefined"
              data-testid="buttonNo"
            >
              <a
                href="/helseatlas"
              >
                NO
              </a>
            </div>
            <div
              class="_eng_d17b29 _active_d17b29"
              data-testid="buttonEng"
            >
              <a
                href="/helseatlas/en"
              >
                ENG
              </a>
            </div>
          </div>
          <div
            class="_menuButton_d17b29"
          >
            <div
              class="_popUpBtn_d1cb5c"
            >
              <button
                class="_button_4123ea"
                data-testid="menuButton"
              >
                <span
                  class="_buttonBurgerIcon_4123ea"
                >
                  <span
                    class="top"
                  />
                  <span
                    class="middle"
                  />
                  <span
                    class="bottom"
                  />
                </span>
                <span
                  class="_buttonText_4123ea"
                >
                  MENU
                </span>
              </button>
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="_container_6b07e8"
    >
      <div
        class="_article__title_6b07e8"
      >
        <h1>
          This is the title
        </h1>
      </div>
      <div
        class="_article_6b07e8"
      >
        <div
          class="_article__content_6b07e8"
        >
          <div
            class="_ingress_e666a6"
          >
            <p>
              This is a summary
            </p>
          </div>
          <p>
            Dette er en test
          </p>
          

          <h1
            id="hovedoverskrift"
          >
            Hovedoverskrift
          </h1>
          

          <p>
            Litt mer tekst
          </p>
          

          <h2
            id="underoverskrift"
          >
            Underoverskrift
          </h2>
          

          <h3
            id="dette-er-en-overskrift"
          >
            Dette er en overskrift!
          </h3>
          

          <pre>
            <code
              class="language-sas"
            >
              data test;
set test2;
var = 0;
run;

            </code>
          </pre>
          

          <p>
            Og litt tekst her
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-16epkjp-MuiGrid2-root"
      style="color: white; margin-top: 20px;"
    >
      <div
        style="background-color: rgb(51, 51, 51); width: 100%;"
      >
        <div
          class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 footer css-5a8y6v-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-ilk0ky-MuiGrid2-root"
            >
              <div
                class="MuiStack-root css-v2woy3-MuiStack-root"
              >
                <h4>
                  OM NETTSTEDET
                </h4>
                <a
                  href="https://www.skde.no/om-skde/personvern/"
                  target="_self"
                >
                  <div
                    class="MuiStack-root css-1rlitzi-MuiStack-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1nmqws6-MuiTypography-root"
                    >
                      Personvern
                    </p>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1lzspe0-MuiSvgIcon-root"
                      data-testid="ArrowForwardIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </div>
                </a>
                <a
                  href="https://www.skde.no/om-skde/informasjonskapsler/"
                  target="_self"
                >
                  <div
                    class="MuiStack-root css-1rlitzi-MuiStack-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1nmqws6-MuiTypography-root"
                    >
                      Informasjonskapsler
                    </p>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1lzspe0-MuiSvgIcon-root"
                      data-testid="ArrowForwardIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </div>
                </a>
                <a
                  href="https://uustatus.no/nb/erklaringer/publisert/589a8d23-4993-446e-b7eb-ef310bfe1dd7"
                  target="_blank"
                >
                  <div
                    class="MuiStack-root css-1rlitzi-MuiStack-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1nmqws6-MuiTypography-root"
                    >
                      Tilgjengelighetserklæring
                    </p>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1lzspe0-MuiSvgIcon-root"
                      data-testid="ArrowOutwardIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6 6v2h8.59L5 17.59 6.41 19 16 9.41V18h2V6z"
                      />
                    </svg>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-gp36o2-MuiGrid2-root"
            >
              <div
                class="MuiStack-root css-v2woy3-MuiStack-root"
              >
                <h4>
                  KONTAKT
                </h4>
                <a
                  href="https://www.skde.no/om-skde/kontaktinformasjon/"
                  target="_self"
                >
                  <div
                    class="MuiStack-root css-1rlitzi-MuiStack-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1nmqws6-MuiTypography-root"
                    >
                      Kontakt SKDE
                    </p>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1lzspe0-MuiSvgIcon-root"
                      data-testid="ArrowForwardIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="background-color: rgb(26, 26, 26); width: 100%;"
      >
        <div
          class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 footer css-1vz7yrt-MuiGrid2-root"
            style="background: rgb(26, 26, 26);"
          >
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1r1tkey-MuiGrid2-root"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-lg-12 MuiGrid2-spacing-xs-4 css-bte3zk-MuiGrid2-root"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
                >
                  <a
                    href="https://www.skde.no/"
                  >
                    <img
                      alt="SKDE-logo"
                      class="footer-logo"
                      data-nimg="1"
                      decoding="async"
                      height="52"
                      id="skde-footer-logo"
                      loading="lazy"
                      src="/img/logos/logo-skde-neg.svg?w=384&q=75"
                      srcset="/img/logos/logo-skde-neg.svg?w=256&q=75 1x, /img/logos/logo-skde-neg.svg?w=384&q=75 2x"
                      style="color: transparent;"
                      width="129"
                    />
                  </a>
                </div>
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
                >
                  <a
                    href="https://helse-forde.no/"
                    title="Link til Helse Førde"
                  >
                    <img
                      alt="Helse Førde logo"
                      data-nimg="1"
                      decoding="async"
                      height="52"
                      loading="lazy"
                      src="/helseatlas/img/logos/helse-forde-hvit.svg?w=640&q=75"
                      srcset="/helseatlas/img/logos/helse-forde-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-forde-hvit.svg?w=640&q=75 2x"
                      style="color: transparent;"
                      width="234"
                    />
                  </a>
                </div>
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
                >
                  <a
                    href="https://helse-vest.no/"
                    title="Link til Helse Vest"
                  >
                    <img
                      alt="Helse Vest logo"
                      data-nimg="1"
                      decoding="async"
                      height="52"
                      loading="lazy"
                      src="/helseatlas/img/logos/helse-vest-hvit.svg?w=640&q=75"
                      srcset="/helseatlas/img/logos/helse-vest-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-vest-hvit.svg?w=640&q=75 2x"
                      style="color: transparent;"
                      width="234"
                    />
                  </a>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
            >
              Senter for klinisk dokumentasjon og evaluering (SKDE) er en enhet i Helse Nord.
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 MuiGrid2-grid-md-4 css-1n7uijs-MuiGrid2-root"
            >
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <b>
                  TELEFON
                </b>
                <a
                  class="css-abunt4"
                  href="tel:77755800"
                >
                  77 75 58 00
                </a>
                <br />
                <b>
                  EPOST
                </b>
                <a
                  class="css-abunt4"
                  href="mailto:postmottak@helse-nord.no"
                >
                  postmottak@helse-nord.no
                </a>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 MuiGrid2-grid-md-4 css-1n7uijs-MuiGrid2-root"
            >
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <b>
                  BESØKSADRESSE
                </b>
                Sykehusvegen 23 
                <br />
                9019 TROMSØ
                <a
                  class="css-abunt4"
                  href="https://maps.app.goo.gl/ohLzsYb8v6YvEDfL9"
                >
                  Vis kart
                </a>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-4 css-w205dv-MuiGrid2-root"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
              >
                <div
                  class="MuiStack-root css-nen11g-MuiStack-root"
                >
                  <b>
                    ORGANISASJONSNUMMER
                  </b>
                  990803765
                </div>
              </div>
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row css-1yuh6d4-MuiGrid2-root"
              >
                <a
                  href="https://www.helse-nord.no/"
                >
                  <img
                    alt="Helse Nord logo"
                    class="footer-logo"
                    data-nimg="1"
                    decoding="async"
                    height="52"
                    id="helse-nord-logo"
                    loading="lazy"
                    src="/img/logos/logo-helse-nord-neg.svg?w=640&q=75"
                    srcset="/img/logos/logo-helse-nord-neg.svg?w=256&q=75 1x, /img/logos/logo-helse-nord-neg.svg?w=640&q=75 2x"
                    style="color: transparent;"
                    width="220"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Nynorsk render 1`] = `
<div>
  <div
    class="MuiBox-root css-161zr72"
  >
    <header
      class="_headerContainer_d17b29"
    >
      <div
        class="_headerLogo_d17b29"
      >
        <a
          href="/helseatlas"
          rel="home"
        >
          <img
            alt="Hjem"
            data-nimg="1"
            decoding="async"
            height="47"
            loading="lazy"
            src="/helseatlas/img/logos/helseatlas.svg?w=384&q=75"
            srcset="/helseatlas/img/logos/helseatlas.svg?w=256&q=75 1x, /helseatlas/img/logos/helseatlas.svg?w=384&q=75 2x"
            style="color: transparent;"
            width="186"
          />
        </a>
      </div>
      <nav
        class="_headerNavContainer_d17b29"
      >
        <div
          class="_navButtons_d17b29"
        >
          <div
            class="_lang_d17b29"
          >
            <div
              class="_no_d17b29 _active_d17b29"
              data-testid="buttonNo"
            >
              <a
                href="/helseatlas"
              >
                NO
              </a>
            </div>
            <div
              class="_eng_d17b29 undefined"
              data-testid="buttonEng"
            >
              <a
                href="/helseatlas/en"
              >
                ENG
              </a>
            </div>
          </div>
          <div
            class="_menuButton_d17b29"
          >
            <div
              class="_popUpBtn_d1cb5c"
            >
              <button
                class="_button_4123ea"
                data-testid="menuButton"
              >
                <span
                  class="_buttonBurgerIcon_4123ea"
                >
                  <span
                    class="top"
                  />
                  <span
                    class="middle"
                  />
                  <span
                    class="bottom"
                  />
                </span>
                <span
                  class="_buttonText_4123ea"
                >
                  MENY
                </span>
              </button>
            </div>
          </div>
        </div>
      </nav>
    </header>
    <div
      class="_container_6b07e8"
    >
      <div
        class="_article__title_6b07e8"
      >
        <h1>
          Dette er ein tittel
        </h1>
      </div>
      <div
        class="_article_6b07e8"
      >
        <div
          class="_article__content_6b07e8"
        >
          <div
            class="_ingress_e666a6"
          >
            <p>
              Dette er eit samandrag
            </p>
          </div>
          <p>
            Dette er ein kort tekst
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row css-16epkjp-MuiGrid2-root"
      style="color: white; margin-top: 20px;"
    >
      <div
        style="background-color: rgb(51, 51, 51); width: 100%;"
      >
        <div
          class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 footer css-5a8y6v-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-ilk0ky-MuiGrid2-root"
            >
              <div
                class="MuiStack-root css-v2woy3-MuiStack-root"
              >
                <h4>
                  OM NETTSTEDET
                </h4>
                <a
                  href="https://www.skde.no/om-skde/personvern/"
                  target="_self"
                >
                  <div
                    class="MuiStack-root css-1rlitzi-MuiStack-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1nmqws6-MuiTypography-root"
                    >
                      Personvern
                    </p>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1lzspe0-MuiSvgIcon-root"
                      data-testid="ArrowForwardIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </div>
                </a>
                <a
                  href="https://www.skde.no/om-skde/informasjonskapsler/"
                  target="_self"
                >
                  <div
                    class="MuiStack-root css-1rlitzi-MuiStack-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1nmqws6-MuiTypography-root"
                    >
                      Informasjonskapsler
                    </p>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1lzspe0-MuiSvgIcon-root"
                      data-testid="ArrowForwardIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </div>
                </a>
                <a
                  href="https://uustatus.no/nb/erklaringer/publisert/589a8d23-4993-446e-b7eb-ef310bfe1dd7"
                  target="_blank"
                >
                  <div
                    class="MuiStack-root css-1rlitzi-MuiStack-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1nmqws6-MuiTypography-root"
                    >
                      Tilgjengelighetserklæring
                    </p>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1lzspe0-MuiSvgIcon-root"
                      data-testid="ArrowOutwardIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6 6v2h8.59L5 17.59 6.41 19 16 9.41V18h2V6z"
                      />
                    </svg>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 css-gp36o2-MuiGrid2-root"
            >
              <div
                class="MuiStack-root css-v2woy3-MuiStack-root"
              >
                <h4>
                  KONTAKT
                </h4>
                <a
                  href="https://www.skde.no/om-skde/kontaktinformasjon/"
                  target="_self"
                >
                  <div
                    class="MuiStack-root css-1rlitzi-MuiStack-root"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1nmqws6-MuiTypography-root"
                    >
                      Kontakt SKDE
                    </p>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1lzspe0-MuiSvgIcon-root"
                      data-testid="ArrowForwardIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="background-color: rgb(26, 26, 26); width: 100%;"
      >
        <div
          class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
        >
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 footer css-1vz7yrt-MuiGrid2-root"
            style="background: rgb(26, 26, 26);"
          >
            <div
              class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1r1tkey-MuiGrid2-root"
            >
              <div
                class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-lg-12 MuiGrid2-spacing-xs-4 css-bte3zk-MuiGrid2-root"
              >
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
                >
                  <a
                    href="https://www.skde.no/"
                  >
                    <img
                      alt="SKDE-logo"
                      class="footer-logo"
                      data-nimg="1"
                      decoding="async"
                      height="52"
                      id="skde-footer-logo"
                      loading="lazy"
                      src="/img/logos/logo-skde-neg.svg?w=384&q=75"
                      srcset="/img/logos/logo-skde-neg.svg?w=256&q=75 1x, /img/logos/logo-skde-neg.svg?w=384&q=75 2x"
                      style="color: transparent;"
                      width="129"
                    />
                  </a>
                </div>
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
                >
                  <a
                    href="https://helse-forde.no/"
                    title="Link til Helse Førde"
                  >
                    <img
                      alt="Helse Førde logo"
                      data-nimg="1"
                      decoding="async"
                      height="52"
                      loading="lazy"
                      src="/helseatlas/img/logos/helse-forde-hvit.svg?w=640&q=75"
                      srcset="/helseatlas/img/logos/helse-forde-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-forde-hvit.svg?w=640&q=75 2x"
                      style="color: transparent;"
                      width="234"
                    />
                  </a>
                </div>
                <div
                  class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
                >
                  <a
                    href="https://helse-vest.no/"
                    title="Link til Helse Vest"
                  >
                    <img
                      alt="Helse Vest logo"
                      data-nimg="1"
                      decoding="async"
                      height="52"
                      loading="lazy"
                      src="/helseatlas/img/logos/helse-vest-hvit.svg?w=640&q=75"
                      srcset="/helseatlas/img/logos/helse-vest-hvit.svg?w=256&q=75 1x, /helseatlas/img/logos/helse-vest-hvit.svg?w=640&q=75 2x"
                      style="color: transparent;"
                      width="234"
                    />
                  </a>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
            >
              Senter for klinisk dokumentasjon og evaluering (SKDE) er en enhet i Helse Nord.
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 MuiGrid2-grid-md-4 css-1n7uijs-MuiGrid2-root"
            >
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <b>
                  TELEFON
                </b>
                <a
                  class="css-abunt4"
                  href="tel:77755800"
                >
                  77 75 58 00
                </a>
                <br />
                <b>
                  EPOST
                </b>
                <a
                  class="css-abunt4"
                  href="mailto:postmottak@helse-nord.no"
                >
                  postmottak@helse-nord.no
                </a>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 MuiGrid2-grid-md-4 css-1n7uijs-MuiGrid2-root"
            >
              <div
                class="MuiStack-root css-nen11g-MuiStack-root"
              >
                <b>
                  BESØKSADRESSE
                </b>
                Sykehusvegen 23 
                <br />
                9019 TROMSØ
                <a
                  class="css-abunt4"
                  href="https://maps.app.goo.gl/ohLzsYb8v6YvEDfL9"
                >
                  Vis kart
                </a>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-4 css-w205dv-MuiGrid2-root"
            >
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row css-1fzlhpv-MuiGrid2-root"
              >
                <div
                  class="MuiStack-root css-nen11g-MuiStack-root"
                >
                  <b>
                    ORGANISASJONSNUMMER
                  </b>
                  990803765
                </div>
              </div>
              <div
                class="MuiGrid2-root MuiGrid2-direction-xs-row css-1yuh6d4-MuiGrid2-root"
              >
                <a
                  href="https://www.helse-nord.no/"
                >
                  <img
                    alt="Helse Nord logo"
                    class="footer-logo"
                    data-nimg="1"
                    decoding="async"
                    height="52"
                    id="helse-nord-logo"
                    loading="lazy"
                    src="/img/logos/logo-helse-nord-neg.svg?w=640&q=75"
                    srcset="/img/logos/logo-helse-nord-neg.svg?w=256&q=75 1x, /img/logos/logo-helse-nord-neg.svg?w=640&q=75 2x"
                    style="color: transparent;"
                    width="220"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
